[package]
name = "boj-cli"
version = "0.0.1"
authors = ["SieR-VR <nwh63@naver.com>"]
license = "MIT"
description = "boj-cli is a command line interface for BOJ."
readme = "README.md"
homepage = "https://github.com/SieR-VR/boj-cli"
repository = "https://github.com/SieR-VR/boj-cli"
keywords = ["boj", "cli"]
categories = ["boj"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }